# loglite

./: .cursorignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  example-config.yaml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: build-cpp-base-image.yml  build-cpp-release-image.yml  build-cpp-test-image.yml  build-docs-image.yml  build-frontend-image.yml  build-python-wheels.yml  cpp-lint.yml  cpp-tests.yaml  cpp-tests.yml  deploy-docs.yml  python-lint.yml  python-tests.yml  tests.yml
burn/: CMakeLists.txt  README.md  build.sh  conanfile.py
burn/src/: config.hpp  http.hpp  main.cpp  schema.hpp  sender.hpp
configs/: basic.yaml  enable-compression.yaml  file-harvester.yaml  full.yaml
cpp/: .clang-format  .clangd  .dockerignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile.linux  Dockerfile.linux.release  Dockerfile.linux.test  README.md  build.sh  conanfile.py  conanfile.txt  run-tests.sh
cpp/cmake/toolchains/: apple-arm64.cmake  linux-arm64.cmake  linux-musl-arm64.cmake  linux-musl-x86_64.cmake  linux-x86_64.cmake
cpp/src/: api.cpp  api.hpp  backlog.cpp  backlog.hpp  bindings.cpp  column_dict.cpp  column_dict.hpp  config.cpp  config.hpp  context.hpp  database.cpp  database.hpp  database_catalog.cpp  database_catalog.hpp  globals.cpp  globals.hpp  log.hpp  main.cpp  metrics.cpp  metrics.hpp  migrations.cpp  migrations.hpp  notifier.hpp  reader_database.cpp  reader_database.hpp  server.cpp  server.hpp  types.hpp  utils.hpp  version.hpp.in  writer_database.cpp  writer_database.hpp
cpp/src/handlers/: common.hpp  health.hpp  insert.hpp  query.hpp  router.hpp  schema.hpp  settings.hpp  sse.hpp  stats.hpp  version_route.hpp
cpp/src/harvesters/: base.hpp  file.hpp  manager.hpp
cpp/src/tasks/: diagnostics.hpp  flush_backlog.hpp  vacuum.hpp
cpp/tests/: CMakeLists.txt  test_backlog.cpp  test_column_dict.cpp  test_config.cpp  test_config_env.cpp  test_database.cpp  test_diagnostics.cpp  test_file_harvester.cpp  test_handlers.cpp  test_log_notifier.cpp  test_metrics.cpp  test_migration_manager.cpp  test_query_filters.cpp  test_read_pool.cpp  test_schema.cpp  test_server.cpp  test_utils.cpp  test_vacuum.cpp
dockerfiles/: Dockerfile.frontend  Dockerfile.linux.base  Dockerfile.linux.release
docs/: Dockerfile  conf.py  index.rst  serve.py
docs/_static/: custom.css
docs/_templates/sidebar/: navigation.html
frontend/: .dockereignore  .env.production  .gitignore  README.md  analyze-bundle.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/scripts/: bundle-analyze.mjs
frontend/src/: App.css  App.tsx  index.css  logLevelStyles.ts  main.tsx  theme.tsx
frontend/src/api/: client.ts
frontend/src/components/: FilterDateTimeInput.tsx  Header.tsx  HistoricalQuery.tsx  JsonViewer.tsx  LiveConsole.tsx  SettingsPanel.tsx  StatsDashboard.tsx  TestPanel.tsx
frontend/src/components/historical-query/: HistoricalLogDetailPanel.tsx  HistoricalLogsTable.tsx  LogTableCell.tsx  QueryFilterBuilder.tsx  QueryFilterValueInput.tsx  QueryResultsPagination.tsx  QueryResultsToolbar.tsx  constants.ts
frontend/src/components/stats-dashboard/: ActivityCategoryChart.tsx  DatabaseGrowthCharts.tsx  StatsChartPanel.tsx  StatsDashboardHeader.tsx  StatsMetricSidebar.tsx  chartPrimitives.tsx  chartSetup.ts  chartTheme.ts  constants.ts  types.ts
frontend/src/components/test-send/: LogInsertFieldInput.tsx
frontend/src/hooks/: useClickOutside.ts  useDashboardTab.ts  useHeaderStats.ts  useLiveLogStream.ts  useLogSchema.ts  useServerHealth.ts  useServerUpSince.ts  useUptimeClock.ts
frontend/src/i18n/: locale.tsx
frontend/src/i18n/messages/: en.ts  zh.ts
frontend/src/utils/: formatBytes.ts  formatTimestamp.ts  logPayloadField.ts  logSchemaFilters.ts  serverUptime.ts
loglite/: _connection.py  backlog.py  cli.py  column_dict.py  config.py  database.py  errors.py  globals.py  handlers.py  main.py  migrations.py  server.py  types.py  utils.py
loglite/handlers/: __init__.py  insert.py  query.py
loglite/harvesters/: __init__.py  base.py  config.py  file.py  manager.py  socket.py  zmq.py
loglite/tasks/: __init__.py  diagnostics.py  flush_backlog.py  vacuum.py
py/: CMakeLists.txt  README.md  pyproject.toml  pyrightconfig.json
py/loglite/: _core.pyi  cli.py
py/loglite/harvesters/: __init__.py  base.py  file.py  manager.py  socket.py  zmq.py
py/recipes/: loguru_http_handler.py
py/tests/: conftest.py  test_cli.py  test_config_validation.py  test_file_harvester_rotation.py  test_harvesters.py
recipes/: loguru_http_handler.py
tests/: test_cli.py  test_column_dict.py  test_config_validation.py  test_database.py  test_file_harvester_rotation.py  test_harvesters.py  test_server.py  test_tasks.py  test_vacuuming.py  utils.py
