[project]
name = "loglite"
version = "0.4.1"
description = ""
authors = [{ name = "namoshizun", email = "dilu3100@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "orjson>=3.10.15",
    "aiosqlite>=0.21.0",
    "aiohttp>=3.13.0",
    "aiohttp-sse>=2.2.0",
    "aiohttp-cors>=0.8.0",
    "pyyaml>=6.0.2",
    "loguru>=0.7.3",
    "typer>=0.15.2",
    "python-dotenv>=1.0.1",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
zmq = ["pyzmq>=26.0.0"]

[project.scripts]
loglite = "loglite.cli:app"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
    "pyright>=1.1.400",
]
docs = [
    "furo>=2025.12.19",
    "sphinx>=8.1.3",
]
test = ["pytest>=8.3.5", "pytest-cov>=6.0.0", "pytest-asyncio>=0.26.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning",
]
# addopts = "-s -v"
addopts = "-v --cov=loglite --cov-report=term"
