[project]
name = "loglite"
version = "1.0.0"
description = "Lightweight log service — Python CLI and harvester layer over the loglite C++ core"
authors = [{ name = "namoshizun", email = "dilu3100@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "typer>=0.15.2",
    "aiofiles>=25.1.0",
    "orjson>=3.10.15",
]

[project.optional-dependencies]
zmq = ["pyzmq>=26.0.0"]

[project.scripts]
loglite = "loglite.cli:app"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
# Conan-generated toolchain is injected via cmake.args at build time.
# See py/README.md for local build instructions.

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
    "pyright>=1.1.400",
]
docs = ["furo>=2025.12.19", "sphinx>=8.1.3"]
test = ["pytest>=8.3.5", "pytest-cov>=6.0.0", "pytest-asyncio>=0.26.0"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning",
]
addopts = "-v --cov=loglite --cov-report=term"
