[project]
name = "loglite"
version = "1.3.0"
description = "Lightweight log service — Python CLI and harvester layer over the loglite C++ core"
authors = [{ name = "Di Lu", email = "dilu3100@gmail.com" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = ["loguru>=0.7.3", "typer>=0.15.2"]
keywords = ["logging", "metrics", "sqlite", "lightweight", "c++"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]

[project.urls]
Documentation = "https://loglite.lu-d.com/"
Homepage = "https://loglite.lu-d.com/"
Issues = "https://github.com/namoshizun/loglite/issues"
Repository = "https://github.com/namoshizun/loglite"

[project.optional-dependencies]
zmq = ["pyzmq>=26.0.0"]

[project.scripts]
loglite = "loglite.cli:app"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
# Conan-generated toolchain is injected via cmake.args at build time.
# See py/README.md for local build instructions.

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
    "pyright>=1.1.400",
    "ruff>=0.15.12",
]
docs = ["furo>=2025.12.19", "sphinx>=8.1.3"]
test = ["pytest>=8.3.5", "pytest-cov>=6.0.0", "pytest-asyncio>=0.26.0"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning",
]
addopts = "-v --cov=loglite --cov-report=term"
